<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplorePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/exploredescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allRooms"
                android:text="@string/all_rooms"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/googleborder"
                android:gravity="center"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/availableRooms"
                android:text="@string/available_rooms"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/googleborder"
                android:gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accommodation"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>

        <!-- RecyclerView for displaying car listings -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/BookingsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:clipToPadding="false" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bottomdescription"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:background="?android:attr/selectableItemBackground">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:background="@color/transparentColor"
                android:layout_width="340dp"
                android:layout_height="200dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="12dp"
            android:text="@string/wambaths_bela_bela_limpopo_south_africa"/>
    </LinearLayout>



</androidx.core.widget.NestedScrollView>