<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selected_Card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!-- Logo Image -->
<!--        <ImageView-->
<!--            android:layout_marginTop="70dp"-->
<!--            android:layout_width="280dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:src="@drawable/logo_black" />-->


            <androidx.cardview.widget.CardView
                android:layout_width="410dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/SelectedSheetImage"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <!-- Left Column: Unit and Sleeper -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/SelectedSheetUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Unit"
                    android:textSize="19sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/SelectedSheetSleeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    android:text="Sleeper"
                    android:textSize="12sp"
                    android:padding="10dp" />
            </LinearLayout>

            <!-- Right Column: Price -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/SelectedSheetPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="Price"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="-20dp">

            <!-- CalendarView for Date Range Selection -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                android:layout_marginTop="20dp">
                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:unfocusedMonthDateColor="@color/green"
                    android:background="#fff"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakdown"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="350dp"
            android:layout_height="1.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textColor="#8000"
                android:text="Selected dates" />

            <TextView
                android:id="@+id/selectedDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No dates selected"
                android:layout_marginEnd="20dp"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textColor="#8000"
                android:text="@string/number_of_nights" />

            <TextView
                android:id="@+id/numberOfDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginEnd="20dp"
                android:gravity="end" />
        </LinearLayout>


        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textColor="#8000"
                android:text="Number of Adults" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:layout_marginEnd="20dp"
                android:gravity="end" />
        </LinearLayout>


        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textColor="#8000"
                android:text="@string/number_of_children" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_marginEnd="20dp"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textColor="#8000"
                android:text="Total" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginEnd="20dp"
                android:gravity="end" />
        </LinearLayout>


        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="#7000" />

        <Button
            android:id="@+id/BookNowButton"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/book_now"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
